{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 95,
  "lineage": "d62623c1-e587-8a49-cba0-eb237512f1e9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0499c2a79ede47052",
            "arn": "arn:aws:ec2:us-east-1:307946673854:elastic-ip/eipalloc-0499c2a79ede47052",
            "domain": "vpc",
            "id": "eipalloc-0499c2a79ede47052",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-226-63-192.compute-1.amazonaws.com",
            "public_ip": "34.226.63.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "user-reviews-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "user-reviews-eip-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ffb0fb6fac53bee",
            "arn": "arn:aws:ec2:us-east-1:307946673854:elastic-ip/eipalloc-02ffb0fb6fac53bee",
            "domain": "vpc",
            "id": "eipalloc-02ffb0fb6fac53bee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-167-130.compute-1.amazonaws.com",
            "public_ip": "35.170.167.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "user-reviews-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "user-reviews-eip-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:internet-gateway/igw-0fe5ff9cefe0a89f4",
            "id": "igw-0fe5ff9cefe0a89f4",
            "owner_id": "307946673854",
            "tags": {
              "Name": "user-reviews-igw"
            },
            "tags_all": {
              "Name": "user-reviews-igw"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-0772995505a95426f",
            "id": "rtb-0772995505a95426f",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe5ff9cefe0a89f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "user-reviews-rt-private"
            },
            "tags_all": {
              "Name": "user-reviews-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-006b4fc6bbe720583",
            "id": "rtb-006b4fc6bbe720583",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe5ff9cefe0a89f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "user-reviews-rt-public"
            },
            "tags_all": {
              "Name": "user-reviews-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03faebb1decf76f95",
            "route_table_id": "rtb-0772995505a95426f",
            "subnet_id": "subnet-077222e9e212515a5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b410f842a1d516",
            "route_table_id": "rtb-0772995505a95426f",
            "subnet_id": "subnet-08f7868e038af85ed"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009a040d6c6c9a44e",
            "route_table_id": "rtb-006b4fc6bbe720583",
            "subnet_id": "subnet-0f340ccdf3cce85b6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd113fe0cb2a29e",
            "route_table_id": "rtb-006b4fc6bbe720583",
            "subnet_id": "subnet-0a3114fd147dc1762"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0e7e49276eca68113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e49276eca68113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-private-us-east-1a"
            },
            "tags_all": {
              "Name": "user-reviews-private-us-east-1a"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-082568bb887203f76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082568bb887203f76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-private-us-east-1b"
            },
            "tags_all": {
              "Name": "user-reviews-private-us-east-1b"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-077222e9e212515a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077222e9e212515a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-private-us-east-1a"
            },
            "tags_all": {
              "Name": "user-reviews-private-us-east-1a"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-08f7868e038af85ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f7868e038af85ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-private-us-east-1b"
            },
            "tags_all": {
              "Name": "user-reviews-private-us-east-1b"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0f340ccdf3cce85b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f340ccdf3cce85b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-public-us-east-1a"
            },
            "tags_all": {
              "Name": "user-reviews-public-us-east-1a"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0a3114fd147dc1762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3114fd147dc1762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-reviews-public-us-east-1b"
            },
            "tags_all": {
              "Name": "user-reviews-public-us-east-1b"
            },
            "vpc_id": "vpc-0025dc7fddea822b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:vpc/vpc-0025dc7fddea822b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-044a4623700115e59",
            "default_route_table_id": "rtb-03bce2dbe13f7cde9",
            "default_security_group_id": "sg-0d3357e81560c4860",
            "dhcp_options_id": "dopt-018c17b64c4b66faf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0025dc7fddea822b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bce2dbe13f7cde9",
            "owner_id": "307946673854",
            "tags": {
              "Name": "user-reviews-vpc"
            },
            "tags_all": {
              "Name": "user-reviews-vpc"
            }
          }
        }
      ]
    }
  ]
}